Dealt with collapsable UI on mobile. Added snap stops

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,7 @@
+:root {
+    --navbar-height: 5rem;
+}
+
 body {
 	@apply bg-neutral-100;
 	@apply text-neutral-900;
